--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $playfair: 'Playfair Display', serif;
 $roboto: 'Roboto', sans-serif;
 
 //Varibles Font Sizes
+$xx-large: 70px;
 $x-large: 30px;
 $large: 18px;
 $medium: 16px;
@@ -31,13 +32,34 @@ $fweight-light: 400;
 $fweight-black: 900;
 
 //Font style
+$regular: normal;
 $italic: italic;
+
+//Device variables
+$map-breakpoints: ('device-small': (min-width: 575.98px),
+  'device-medium': (min-width: 767.98px),
+  'device-large': (min-width: 991.98px),
+  'device-xlarge': (min-width: 1199.98px),
+);
 
 ///////////////////////
 //Variables Boostrap//
+//line-70 - redefine color
+$primary: $eerie-bolack;
+//line-71 - redefine color 
+$secondary:$light-gray;
+//line-72 redefine color
+$success: $nickel;
+//line-77 - redefinecolor 
+$dark:$eerie-bolack;
 
-//line-77 - redefino color 
-//$dark:$my-eerie-bolack;
+//line-452
+$font-sizes: (1: $xx-large,
+  2: $x-large,
+  3: $large,
+  4: $medium,
+  5: $small,
+  6: $small);
 
 //line-936 - redefino color de la hamburgesa
 //$navbar-dark-color: rgba($my-white, 1);
