--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -1,6 +1,7 @@
 //familia de letras
 body {
   font-family: $roboto;
+  font-style: $regular;
   font-size: $medium;
   font-weight: $fweight-regular;
   color: $eerie-bolack;
@@ -9,18 +10,29 @@ body {
 h1 {
   font-family: $playfair;
   font-size: $x-large;
-  font-weight: $black;
+  font-weight: $fweight-black;
+  font-style: $italic;
   color: $white;
+  text-shadow: 2px 2px 4px #000000;
+
+  @include response-to('device-small') {
+    font-size: $xx-large;
+  }
 }
 
 h2 {
+  font-family: $playfair;
   font-size: $x-large;
+  font-weight: $fweight-black;
+  font-style: $italic;
 }
 
 h3 {
   font-size: $medium;
+  color: $fuzzy-wuzzy;
 }
 
 p {
   font-size: $small;
 }
+
