--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-family: $playfair;
-  font-size: $x-large;
+  font-size: calc(30px + (100vw - 280px) * 0.15 );
   font-weight: $fweight-black;
   font-style: $italic;
   color: $white;
