página funcionando para dispositivos grandes

--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -61,6 +61,11 @@ $font-sizes: (1: $xx-large,
   5: $small,
   6: $small);
 
+//line-992
+$navbar-dark-hover-color:$ruddy-pink;
+
+$navbar-dark-active-color:$fuzzy-wuzzy;
+
 //line-936 - redefino color de la hamburgesa
 //$navbar-dark-color: rgba($my-white, 1);
 
