--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -11,6 +11,7 @@
 //layout
 @import 'layout/header';
 @import 'layout/logo';
+@import 'layout/container-img-custom';
 //components
 //pages
 //themes
