--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4156,23 +4156,23 @@ textarea.form-control-lg {
 }
 
 .navbar-dark .navbar-brand {
-  color: #FFF;
+  color: #E56353;
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-  color: #FFF;
+  color: #E56353;
 }
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.55);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #D76C69;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
 }
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #FFF;
+  color: #E56353;
 }
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.55);
@@ -4187,7 +4187,7 @@ textarea.form-control-lg {
 .navbar-dark .navbar-text a,
 .navbar-dark .navbar-text a:hover,
 .navbar-dark .navbar-text a:focus {
-  color: #FFF;
+  color: #E56353;
 }
 
 .card {
@@ -10770,8 +10770,13 @@ h3, .h3 {
   color: #E56353;
 }
 
-p {
+p, .fs-custom {
   font-size: 12px;
+}
+@media (min-width: 767.98px) {
+  p, .fs-custom {
+    font-size: 16px;
+  }
 }
 
 .header {
@@ -10785,6 +10790,17 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (min-width: 767.98px) {
+  .header {
+    height: 55vw;
+  }
+}
+@media (min-width: 1199.98px) {
+  .header {
+    height: 800px;
+    background-position: top;
+  }
 }
 .header__title {
   padding: 0 15%;
@@ -10806,9 +10822,22 @@ p {
   width: 54px;
   height: 22px;
 }
-.logo--large {
-  width: 88px;
-  height: 36px;
+@media (min-width: 767.98px) {
+  .logo--footer {
+    width: 88px;
+    height: 36px;
+  }
+}
+
+.container-img-custom {
+  width: 150px;
+  height: 150px;
+}
+@media (min-width: 767.98px) {
+  .container-img-custom {
+    width: 140px;
+    height: 140px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
