--- a/assets/css/sass/layout/_logo.scss
+++ b/assets/css/sass/layout/_logo.scss
@@ -1,11 +1,11 @@
-.logo{
+.logo {
   width: 54px;
   height: 22px;
 
-  &--large{
-    width: 88px;
-    height: 36px;
+  &--footer {
+    @include response-to('device-medium') {
+      width: 88px;
+      height: 36px;
+    }
   }
-
 }
-
