--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10782,7 +10782,7 @@ p, .fs-custom {
 .header {
   width: 100%;
   height: 156vw;
-  background-image: url("/assets/img/post-image.jpg");
+  background-image: url("assets/img/post-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
