ahora si se corrige con ../../../../assets/img/post-image.jpg  url header sass

--- a/assets/css/sass/abstracts/_variables.scss
+++ b/assets/css/sass/abstracts/_variables.scss
@@ -16,8 +16,10 @@ $raisin-black: #222323;
 $nickel: #6C6E70;
 
 //Variables Font Family
-$playfair: 'Playfair Display', serif;
-$roboto: 'Roboto', sans-serif;
+$playfair: 'Playfair Display',
+serif;
+$roboto: 'Roboto',
+sans-serif;
 
 //Varibles Font Sizes
 $xx-large: 70px;
@@ -71,5 +73,3 @@ $navbar-dark-active-color:$fuzzy-wuzzy;
 
 //line-968 - redefino el borde del boton con opacidad 0 para quitar el color blanco
 //$navbar-dark-toggler-border-color: rgba($my-white, 0)
-
-
