--- a/assets/css/sass/layout/_header.scss
+++ b/assets/css/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 156vw;
-  background-image: url('assets/img/post-image.jpg');
+  background-image: url('../../../../assets/img/post-image.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
