--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10746,7 +10746,7 @@ body {
 
 h1, .h1 {
   font-family: "Playfair Display", serif;
-  font-size: calc(30px + (100vw - 280px) * 0.15 );
+  font-size: calc(30px + (100vw - 280px) * 0.15);
   font-weight: 900;
   font-style: italic;
   color: #FFF;
@@ -10770,11 +10770,13 @@ h3, .h3 {
   color: #E56353;
 }
 
-p, .fs-custom {
+p,
+.fs-custom {
   font-size: 12px;
 }
 @media (min-width: 767.98px) {
-  p, .fs-custom {
+  p,
+.fs-custom {
     font-size: 16px;
   }
 }
@@ -10782,7 +10784,7 @@ p, .fs-custom {
 .header {
   width: 100%;
   height: 156vw;
-  background-image: url("assets/img/post-image.jpg");
+  background-image: url("../../../../assets/img/post-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
