--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10784,7 +10784,7 @@ p,
 .header {
   width: 100%;
   height: 156vw;
-  background-image: url("../../../../assets/img/post-image.jpg");
+  background-image: url("../../assets/img/post-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
